<resources>
    <string name="app_name">Privacy_CaaS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>

    <string name="last_opened">Last Opened</string>

    <string name="settings">Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="about">About</string>
    <string name="privacy_preferences">Privacy Preferences</string>
    <string name="dsar">Data Subject Access Request</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="search">Search</string>


    <string name="select_theme">Select Theme</string>
    <string name="choose_theme_throughout">Choose a theme to be used throughout the app.</string>
    <string name="choose_start_page">Choose the start page to be displayed on launch.</string>
    <string name="start_page">Start page</string>
    <string name="artist_in_grid">Artists in Grid</string>1
    <string name="toggle_artists_grid">Toggle for displaying artists in a 2x2 grid.</string>
    <string name="toggle_system_animations">Toggle for system animations throughout the app.</string>
    <string name="system_animations">System animations</string>
    <string name="toggle_animations">Toggle for Transition animation throughout the app.</string>
    <string name="animations">Animations</string>
    <string name="now_playing_selector">Choose a now playing screen from 4 different styles.</string>
    <string name="personalisation">Personalisation</string>
    <string name="other">Other</string>
    <string name="advanced">Advanced</string>
    <string name="about_privacy">By using this app, you agree to the <u>Terms of service</u> and <u>Privacy Policy</u></string>
    <string name="summary_pause_detach">Toggle for pausing playback when headphone is detached</string>
    <string name="pause_detach">Pause on Detach</string>
    <string name="summary_xposed_trackselector">Requires Xposed and XMediaNotificationTrackSelector Xposed module to be installed. This will provide access to playing queue from the notification bar itself.</string>
    <string name="xposed_trackselector">Playing queue support in notification</string>
    <string name="currently_selected">Currently Selected</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Apply a dark theme throughout the app</string>

    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>

    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>

    <string name="colored_status_bar">Colored Status Bar</string>
    <string name="colored_status_bar_summary">Toggle status bar coloring</string>

    <string name="colored_nav_bar">Colored Navigation Bar</string>
    <string name="colored_nav_bar_summary">Toggle navigation bar coloring</string>


    <string name="lastfm_pref">Login to LastFM to scrobble</string>
    <string name="lastfm_login_failture">Failed to Login</string>
    <string name="lastfm_login">Login to LastFM</string>
    <string name="do_not_sell"><i>Do Not Sell My Information</i></string>
    <string name="age_verification">Age Verification</string>
    <string name="lastfm_loged_in">Logged in as %s</string>

    <string name="cancel">Cancel</string>

    <!-- Data Access texts -->
    <!-- Title text on the Manage your data screen. -->
    <string name="evidon_manage_your_data_header" >Manage Your Data</string>
    <!-- Title text on the third party technologies  screen. -->
    <string name="evidon_third_party_technologies_header" >Third-Party technologies</string>
    <!-- Text of the message in in user profile Screen -->
    <string name="evidon_data_access_message_text" >In order to complete your request. please help us identify you in our system.</string>
    <!-- Text of the required firstName field in user profile Screen-->
    <string name="evidon_data_access_firstname_text" >First Name*</string>
    <!-- Text of the required lastName field in user profile Screen-->
    <string name="evidon_data_access_lastname_text" >last Name*</string>
    <!-- Text of the required email field in user profile Screen-->
    <string name="evidon_data_access_email_text" >Email Address*</string>
    <!-- Text of the RequestType radioGroup heading in user profile Screen-->
    <string name="evidon_data_access_requestype_heading_text" >What would you like to do?</string>
    <!-- Text of the access-data radio button  in user profile Screen-->
    <string name="evidon_data_access_requestype_accessdata_text" >Access my data</string>
    <!-- Text of the rectify-data radio button in user profile Screen-->
    <string name="evidon_data_access_requestype_rectifydata_text" >Rectify my data</string>
    <!-- Text of the erase-data radio button in user profile Screen-->
    <string name="evidon_data_access_requestype_erasedata_text" >Erase my data</string>
    <!-- Text of the restrict-data radio button in user profile Screen-->
    <string name="evidon_data_access_requestype_restrictdata_text" >Restrict processing of my data</string>
    <!-- Text of the move-data radio button in user profile Screen-->
    <string name="evidon_data_access_requestype_movedata_text" >Move my data</string>
    <!-- Text of the object-data radio button in user profile Screen-->
    <string name="evidon_data_access_requestype_objectdatause_text" >Object to the use of my personal data</string>
    <!-- Text of the comments field in user profile Screen-->
    <string name="evidon_data_access_comments_text" >Comments</string>
    <!-- Text of the required firstName field in user profile Screen-->
    <string name="evidon_data_cancel_button_text" >CANCEL</string>
    <!-- Text of the required firstName field in user profile Screen-->
    <string name="evidon_data_submit_button_text" >SUBMIT</string>
    <!-- Text of the title to get the description about the request types in web link-->
    <string name="evidon_what_do_these_options_mean_text" >What do these options mean?</string>
    <!-- Text of the message in manage_preferences Screen-->
    <string name="evidon_preferences_message" >The General Data Protection Regulation(GDPR) aims to give you control over your data. You can use this section to exercise your rights over your information or make choices about, how we collect other information about you.</string>
    <!-- Text of the message for thirs-party technologies -->
    <string name="evidon_preferences_third_party_message" >Learn about vendors used in this app</string>
    <!-- Text of the message for Manage your data -->
    <string name="evidon_preferences_manage_your_data_message" >Exercise your GDPR rights</string>

    <!-- Vendor Detail -->
    <!-- Text for the "allow" checkbox line of the vendor detail screen -->
    <string name="evidon_vendor_detail_allow_technology" >Allow</string>
    <!-- Text of the learn-more paragraph above the learn-more link on the vendor detail screen -->
    <string name="evidon_vendor_detail_learnmore">To learn more, please visit:</string>


    <string name="view_vendors"><u>view vendors</u></string>


</resources>