<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            android:background="?attr/colorPrimary"
            android:elevation="5dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/evidon_data_access_message_text" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp">

            <EditText
                android:id="@+id/dsar_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/evidon_rect_text_edit"
                android:hint="@string/evidon_data_access_firstname_text"
                android:maxLines="1"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp">

            <EditText
                android:id="@+id/dsar_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/evidon_rect_text_edit"
                android:hint="@string/evidon_data_access_lastname_text"
                android:maxLines="1"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp">

            <EditText
                android:id="@+id/dsar_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/evidon_rect_text_edit"
                android:hint="@string/evidon_data_access_email_text"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/evidon_data_access_requestype_heading_text" />

        <RadioGroup
            android:id="@+id/rg_data_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/evidon_data_access_requestype_accessdata_text" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="3"
                android:text="@string/evidon_data_access_requestype_rectifydata_text" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/evidon_data_access_requestype_erasedata_text" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="5"
                android:text="@string/evidon_data_access_requestype_restrictdata_text" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="4"
                android:text="@string/evidon_data_access_requestype_movedata_text" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:tag="6"
                android:text="@string/evidon_data_access_requestype_objectdatause_text" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="2dp"
            android:autoLink="web"
            android:text="@string/evidon_what_do_these_options_mean_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/dsar_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/evidon_rect_text_edit"
                android:hint="@string/evidon_data_access_comments_text"
                android:maxLines="4"
                android:overScrollMode="always"
                android:padding="5dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dsar_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="8dp"
                android:text="@string/evidon_data_cancel_button_text"
                android:theme="@style/Widget.AppCompat.Button" />

            <Button
                android:id="@+id/dsar_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="8dp"
                android:text="@string/evidon_data_submit_button_text"
                android:theme="@style/Widget.AppCompat.Button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
